docs: documentated and refactored